--- a/simulation/remote/infra/cloudformation.yaml
+++ b/simulation/remote/infra/cloudformation.yaml
@@ -341,7 +341,7 @@ Resources:
             - Name: ORCHESTRATOR_URL
               Value: !Sub "${OrchestratorInstance.PrivateIp}:${OrchestratorPort}"
             - Name: EXPLORER_URL
-              Value: !Sub "${OrchestratorInstance.PrivateIp}:3000"
+              Value: !Sub "http://${OrchestratorInstance.PrivateIp}:3000"
           LogConfiguration:
             LogDriver: awslogs
             Options:
