--- a/.github/workflows/ark.trivy.yaml
+++ b/.github/workflows/ark.trivy.yaml
@@ -2,7 +2,7 @@ name: Trivy Security Scan
 
 on:
   push:
-    branches: ["master"]
+    branches: ["*"]
   pull_request:
     branches: ["master"]
 
@@ -26,6 +26,9 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.24.0
+        env:
+          TRIVY_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-db
+          TRIVY_JAVA_DB_REPOSITORY: public.ecr.aws/aquasecurity/trivy-java-db
         with:
           image-ref: "${{ github.repository }}:${{ github.sha }}"
           format: "table"
