--- a/.github/workflows/ark.trivy.yaml
+++ b/.github/workflows/ark.trivy.yaml
@@ -2,7 +2,7 @@ name: Trivy Security Scan
 
 on:
   push:
-    branches: ["*"]
+    branches: ["master"]
   pull_request:
     branches: ["master"]
 
