--- a/docker-compose.clark.regtest.yml
+++ b/docker-compose.clark.regtest.yml
@@ -17,11 +17,19 @@ services:
       - ARK_NO_TLS=true
       - ARK_NO_MACAROONS=true
       - ARK_DATADIR=/app/data
+      - ARK_NOSTR_DEFAULT_RELAYS=ws://nak:10547
     ports:
       - "7070:7070"
     volumes:
       - type: tmpfs
         target: /app/data
+  nak:
+    container_name: nak
+    build:
+      context: .
+      dockerfile: nak.Dockerfile
+    ports:
+      - "10547:10547"
 
 networks:
   default:
