--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -78,7 +78,10 @@ jobs:
         with:
           version: v1.61
           working-directory: ./pkg/client-sdk
-          args: --timeout 5m --skip-files '^test/wasm/wasm_test\.go$'
+          config-content: |
+            issues:
+              exclude-files:
+                - '^test/wasm/wasm_test\.go$'
       - name: check code integrity
         uses: securego/gosec@master
         with:
