--- a/.github/workflows/ark.unit.yaml
+++ b/.github/workflows/ark.unit.yaml
@@ -78,10 +78,7 @@ jobs:
         with:
           version: v1.61
           working-directory: ./pkg/client-sdk
-          config-content: |
-            issues:
-              exclude-files:
-                - '^test/wasm/wasm_test\.go$'
+          args: --timeout 5m --skip-files=.*_test.go
       - name: check code integrity
         uses: securego/gosec@master
         with:
