--- a/pkg/client-sdk/Makefile
+++ b/pkg/client-sdk/Makefile
@@ -36,7 +36,7 @@ GO_VERSION := $(shell go version | cut -d' ' -f3)
 build-wasm:
 	@mkdir -p $(BUILD_DIR)
 	@echo "Version: $(VERSION)"
-	@GOOS=js GOARCH=wasm GO111MODULE=on go build -ldflags="-s -w -X 'main.Version=$(VERSION)'" -o $(BUILD_DIR)/ark-sdk.wasm $(WASM_DIR)/main.go
+	@GOOS=js GOARCH=wasm GO111MODULE=on go build -ldflags="-s -w -X 'main.version=$(VERSION)'" -o $(BUILD_DIR)/ark-sdk.wasm $(WASM_DIR)/main.go
 
 test-wasm:
 	$(MAKE) build-wasm BUILD_DIR=./test/wasm/web
