--- a/.github/workflows/ark.autogen_client.yaml
+++ b/.github/workflows/ark.autogen_client.yaml
@@ -22,23 +22,20 @@ jobs:
       run: go work sync
 
     - name: Install Swagger
-      run: |
-        go install github.com/go-swagger/go-swagger/cmd/swagger@latest
+      run: go install github.com/go-swagger/go-swagger/cmd/swagger@latest
 
     - name: Generate Client
       working-directory: pkg/client-sdk
-      run: |
-        REST_DIR=tmp make genrest
+      run: make genrest
 
-    - name: Compare Generated Client
-      working-directory: pkg/client-sdk
+    - name: Check for uncommitted changes
       run: |
-        if ! diff -r client/rest/service tmp; then
-          echo "Generated client differs from the committed version."
-          echo "Please run 'make genrest' locally and commit the changes."
-          exit 1
-        fi
+        git add .
+        git diff --staged --exit-code
 
-    - name: Clean up
-      working-directory: pkg/client-sdk
-      run: rm -rf tmp
+    - name: Fail if changes detected
+      if: failure()
+      run: |
+        echo "❌ Generated client is out of date!"
+        echo "Please run 'make genrest' and commit the changes."
+        exit 1
