Move explorer-like RPCs to dedicated proto (#421)
* Add explorer.proto and types.proto

* Update SDK

* Update server

* Fix makefile

* Wrap explorer service into grpc-gateway

--- a/pkg/client-sdk/Makefile
+++ b/pkg/client-sdk/Makefile
@@ -9,6 +9,7 @@ genrest:
 	@echo "Generating rest client from stub..."
 	@mkdir -p $(client_dir)
 	@swagger generate client -f ../../api-spec/openapi/swagger/ark/v1/service.swagger.json -t $(client_dir) --client-package=arkservice
+	@swagger generate client -f ../../api-spec/openapi/swagger/ark/v1/explorer.swagger.json -t $(client_dir) --client-package=explorerservice
 
 ## test: runs unit tests
 test:
