sdk indexer impl

--- a/pkg/client-sdk/Makefile
+++ b/pkg/client-sdk/Makefile
@@ -10,6 +10,7 @@ genrest:
 	@mkdir -p $(client_dir)
 	@swagger generate client -f ../../api-spec/openapi/swagger/ark/v1/service.swagger.json -t $(client_dir) --client-package=arkservice
 	@swagger generate client -f ../../api-spec/openapi/swagger/ark/v1/explorer.swagger.json -t $(client_dir) --client-package=explorerservice
+	@swagger generate client -f ../../api-spec/openapi/swagger/ark/v1/indexer.swagger.json -t $(client_dir) --client-package=indexerservice
 
 ## test: runs unit tests
 test:
