--- a/server/envs/bitcoind.regtest.env
+++ b/server/envs/bitcoind.regtest.env
@@ -1,13 +1,12 @@
-ARK_ROUND_INTERVAL=10
 ARK_LOG_LEVEL=5
 ARK_NETWORK=regtest
-ARK_PORT=7070
-ARK_NO_TLS=true
 ARK_NO_MACAROONS=true
-ARK_TX_BUILDER_TYPE=covenantless
 ARK_BITCOIND_RPC_USER=admin1
 ARK_BITCOIND_RPC_PASS=123
 ARK_BITCOIND_RPC_HOST=localhost:18443
 ARK_BITCOIND_ZMQ_BLOCK=tcp://127.0.0.1:28332
 ARK_BITCOIND_ZMQ_TX=tcp://127.0.0.1:28333
 ARK_DATADIR=./data/regtest
+ARK_VTXO_TREE_EXPIRY= 604672
+ARK_UNILATERAL_EXIT_DELAY = 1024
+ARK_BOARDING_EXIT_DELAY = 604672
