--- a/server/envs/neutrino.mutinynet.env
+++ b/server/envs/neutrino.mutinynet.env
@@ -1,10 +1,9 @@
-ARK_ROUND_INTERVAL=10
 ARK_LOG_LEVEL=5
 ARK_NETWORK=mutinynet
-ARK_PORT=7070
-ARK_NO_TLS=true
 ARK_NO_MACAROONS=true
-ARK_TX_BUILDER_TYPE=covenantless
 ARK_ESPLORA_URL=https://mutinynet.com/api
 ARK_NEUTRINO_PEER=45.79.52.207:38333
 ARK_DATADIR=./data/mutinynet
+ARK_VTXO_TREE_EXPIRY= 604672
+ARK_UNILATERAL_EXIT_DELAY = 1024
+ARK_BOARDING_EXIT_DELAY = 604672
