--- a/server/envs/neutrino.regtest.env
+++ b/server/envs/neutrino.regtest.env
@@ -1,11 +1,10 @@
-ARK_ROUND_INTERVAL=10
 ARK_LOG_LEVEL=5
 ARK_NETWORK=regtest
-ARK_PORT=7070
-ARK_NO_TLS=true
 ARK_NO_MACAROONS=true
-ARK_TX_BUILDER_TYPE=covenantless
 ARK_ESPLORA_URL=http://localhost:3000
 ARK_NEUTRINO_PEER=localhost:18444
 ARK_DATADIR=./data/regtest
 ARK_ALLOW_ZERO_FEES=true
+ARK_VTXO_TREE_EXPIRY= 604672
+ARK_UNILATERAL_EXIT_DELAY = 1024
+ARK_BOARDING_EXIT_DELAY = 604672
