--- a/server/Makefile
+++ b/server/Makefile
@@ -91,4 +91,4 @@ vet_db: recreatedb mig_up mig_down_yes
 ## sqlc: gen sql
 sqlc:
 	@echo "gen sql..."
-	@docker run --rm -v ./internal/infrastructure/db/sqlite:/src -w /src sqlc/sqlc generate
+	cd ./internal/infrastructure/db/sqlite; sqlc generate
