--- a/server/envs/neutrino.regtest.env
+++ b/server/envs/neutrino.regtest.env
@@ -6,5 +6,5 @@ ARK_NEUTRINO_PEER=localhost:18444
 ARK_DATADIR=./data/regtest
 ARK_ALLOW_ZERO_FEES=true
 ARK_VTXO_TREE_EXPIRY= 604672
-ARK_UNILATERAL_EXIT_DELAY=1024
-ARK_BOARDING_EXIT_DELAY=604672
+ARK_UNILATERAL_EXIT_DELAY = 1024
+ARK_BOARDING_EXIT_DELAY = 604672
